# zorba-util-jvm-module

./: CMakeLists.txt
cmake_modules/: FindJNI.cmake
cmake_modules/Windows/: FindJNI.cmake
config/: CMakeLists.txt  UtilJavaUse.cmake
include/: JavaVMSingleton.h
src/: CMakeLists.txt  JavaVMSingleton.cpp  util-jvm.cpp  util-jvm.xq
src/util-jvm.xq.src/: JavaVMSingelton.cpp  JavaVMSingelton.h  JavaVMSingleton.h  util-jvm.cpp
